MOBILE-3525 video: Fix video pseudo style on iOS

--- a/src/app/app.ios.scss
+++ b/src/app/app.ios.scss
@@ -120,4 +120,34 @@ ion-app.app-root.ios {
       cursor: pointer;
     }
   }
+
+  audio, video {
+
+    // If this line has effect whould solve the problem.
+    .background-tint, .background-tint > div {
+      z-index: -1;
+    }
+
+    // Another solution would be this but also has no effect.
+    &::-webkit-media-controls-overlay-play-button,
+    &::-webkit-slide-runnable-track,
+    &::-webkit-media-controls-panel,
+    &::-webkit-media-controls-play-button,
+    &::-webkit-media-controls-volume-slider-container,
+    &::-webkit-media-controls-volume-slider,
+    &::-webkit-media-controls-mute-button,
+    &::-webkit-media-controls-timeline,
+    &::-webkit-media-controls-current-time-display,
+    &::-webkit-full-page-media::-webkit-media-controls-panel,
+    &::-webkit-media-controls-timeline-container,
+    &::-webkit-media-controls-time-remaining-display,
+    &::-webkit-media-controls-seek-back-button,
+    &::-webkit-media-controls-seek-forward-button,
+    &::-webkit-media-controls-fullscreen-button,
+    &::-webkit-media-controls-rewind-button,
+    &::-webkit-media-controls-return-to-realtime-button,
+    &::-webkit-media-controls-toggle-closed-captions-button {
+      z-index: 1;
+    }
+  }
 }
